# databricks_genie_data_analyst_crew

./: README.md  pyproject.toml
output/: databricks_query_output.md
src/data_analyst/: crew.py  main.py
src/data_analyst/config/: agents.yaml  tasks.yaml
src/data_analyst/tools/: databricks_tools.py
