[project]
name = "data_analyst"
version = "0.1.0"
description = "data-analyst using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
data_analyst = "data_analyst.main:run"
run_crew = "data_analyst.main:run"
train = "data_analyst.main:train"
replay = "data_analyst.main:replay"
test = "data_analyst.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
